完成添加多个头布局和脚布局

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,6 +7,17 @@
     android:orientation="vertical"
     tools:context="com.example.administrator.testrecyclerview.MainActivity">
 
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="header"
+        android:onClick="header"/>
+
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="footer"
+        android:onClick="footer"/>
 
 
     <com.necer.nrecyclerview.NRecyclerView
