--- a/app/src/main/res/layout/footer.xml
+++ b/app/src/main/res/layout/footer.xml
@@ -4,6 +4,7 @@
     android:layout_height="wrap_content">
 
     <TextView
+        android:id="@+id/tv_footer"
         android:layout_width="match_parent"
         android:layout_height="100dp"
         android:text="脚部"
