--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -22,6 +22,11 @@
         android:layout_height="wrap_content"
         android:onClick="empty"
         android:text="empty" />
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:onClick="add"
+        android:text="add" />
 
     <RelativeLayout
         android:layout_width="match_parent"
