--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -35,7 +35,8 @@
         <com.necer.nrecyclerview.NRecyclerView
             android:id="@+id/recycler"
             android:layout_width="match_parent"
-            android:layout_height="match_parent" />
+            android:layout_height="match_parent"
+            android:overScrollMode="ifContentScrolls"/>
         <TextView
             android:id="@+id/tv_no"
             android:layout_width="match_parent"
