增加去除脚部和头部的方法

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -27,6 +27,11 @@
         android:layout_height="wrap_content"
         android:onClick="add"
         android:text="add" />
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:onClick="removeHeaderView"
+        android:text="removeHeaderView" />
 
     <RelativeLayout
         android:layout_width="match_parent"
