增加加载更多的NNRecyclerView

--- a/nrecyclerview/src/main/res/layout/layout_load_more.xml
+++ b/nrecyclerview/src/main/res/layout/layout_load_more.xml
@@ -11,7 +11,7 @@
         android:orientation="horizontal">
 
         <ProgressBar
-            android:id="@+id/pb_loading"
+            android:id="@+id/pb_"
             android:layout_width="20dp"
             android:layout_height="20dp"
             />
